argo-cd/dashboard-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.ingress.extramed.com.br
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - argocd.ingress.extramed.com.br
      secretName: argocd-server-cert
